--- a/Code/Oceanographic_drivers_historical.ipynb
+++ b/Code/Oceanographic_drivers_historical.ipynb
@@ -18,33 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "78461774",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the modules you will need for this notebook\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import netCDF4 as nc4\n",
-    "import requests\n",
+    "# required packages for this script\n",
     "import os\n",
-    "import argparse\n",
-    "import cmocean.cm as cm\n",
-    "import cartopy \n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import datetime, timedelta\n",
-    "import cmocean\n",
-    "from collections import defaultdict\n",
-    "import csv\n",
-    "import calendar"
+    "import netCDF4 as nc4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e58d96aa",
    "metadata": {},
    "outputs": [
@@ -197,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "880b9eb3",
    "metadata": {},
    "outputs": [
